# nori

./: CMakeConfig.txt  CMakeLists.txt  README.md
ext/hypothesis/: hypothesis.h
ext/nanogui/src/: nanogui.cpp
ext/tinyformat/: README.rst  tinyformat.h
include/nori/: PhaseFunction.h  bitmap.h  block.h  bsdf.h  bvh.h  camera.h  common.h  emitter.h  gui.h  integrator.h  lodepng.h  medium.h  mesh.h  object.h  proplist.h  render.h  rfilter.h  sampler.h  scene.h  shape.h  texture.h  warp.h
report-apaccagne-houskan/: project-report Nik.html  project-report.html
report-apaccagne-houskan/resources/: custom2014.css
scenes/Final/: final_scene.xml  material.xml
scenes/Final/meshes/: Box.mtl  stairs2.mtl  teeth22.mtl
scenes/Project/ChromaticAberration/: aberration.exr  aberration.xml
scenes/Project/DepthOfField/: depthoffield.exr  depthoffield.xml  depthoffield_var.exr  depthoffieldcoloredcups.xml
scenes/Project/Disney/: cbox_path_mis.xml  material.xml  test.xml
scenes/Project/EnvMap/: envmap.xml
scenes/Project/ImageTexture/: imagetexture.exr  imagetexture.xml  imagetexture_var.exr
scenes/Project/LensDistortion/: distortion.xml  distortionold.xml
scenes/Project/Medium/: cbox_path_vol.xml  cbox_path_vol_mitsuba.xml  material.xml
scenes/Project/ProceduralTexture/: proceduraltexture.xml
scenes/Project/SpotLight/: mesh-texture.xml  mesh-texture_var.exr  spotlight.exr  spotlight.xml  spotlight_var.exr  spotlightmitsuba.xml  spotlightnori.xml
scenes/Project/Vol/: cbox_path_vol.xml
scenes/Project/normal/: material.xml  normal.xml
scenes/Project/textureemitter/: texture_emitter.xml
scenes/mmm/: material.xml
scenes/pa1/: ajax-av.exr  ajax-av.xml  ajax-normals.exr  ajax-normals.xml  mesh-texture.exr  mesh-texture.xml  sphere-analytic.exr  sphere-analytic.xml  sphere-mesh.exr  sphere-mesh.xml  sphere-texture.exr  sphere-texture.xml  sponza-av.exr  sponza-direct.exr  test-direct.xml  test-sponza.xml  test.exr  test.xml
scenes/pa1/ref/: ajax-av-1024spp.exr  ajax-normals.exr  mesh-texture.exr  sphere-analytic.exr  sphere-mesh.exr  sphere-texture.exr  sponza-av-1024spp.exr  sponza-direct-4spp.exr
scenes/pa3/odyssey/: odyssey_ems.exr  odyssey_ems.xml  odyssey_mats.exr  odyssey_mats.xml  odyssey_mis.exr  odyssey_mis.xml
scenes/pa3/sphere/: point_ems.exr  point_ems.xml  sphere2_ems.exr  sphere2_ems.xml  (+10 more)
src/: PhaseFunction.cpp  arealight.cpp  averagevisibility.cpp  bitmap.cpp  block.cpp  bvh.cpp  checkerboard.cpp  chi2test.cpp  common.cpp  conductor.cpp  consttexture.cpp  dielectric.cpp  diffuse.cpp  direct.cpp  direct_ems.cpp  direct_mats.cpp  direct_mis.cpp  disney.cpp  envmap.cpp  gui.cpp  hdrToLdr.cpp  imagetexture.cpp  independent.cpp  lodepng.cpp  main.cpp  medium.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  normals.cpp  normaltexture.cpp  object.cpp  parser.cpp  path_mats.cpp  path_mis.cpp  perlintexture.cpp  perspective.cpp  photonmapper.cpp  pointlight.cpp  proceduraltexture.cpp  (+11 more)
src/matlab/: Nldenoise.m
(+39 files in other folders)
